--- a/index.css
+++ b/index.css
@@ -5,9 +5,7 @@
 body {
     margin: 0;
     background-color: whitesmoke;
-    max-width: fit-content;
-    font-size: 1em;
-
+    width: 100%;
 }
 
 /* */
@@ -181,6 +179,7 @@ body {
 
 /**/
 .search {
+    height: 100px;
     max-width: 900px;
     padding: 10px;
     margin: auto;
@@ -242,10 +241,11 @@ body {
     background-color: blue;
     color: white;
     font-size: 2em;
-    height: 100px;
+    height: 60px;
     min-width: 200px;
-    padding: 0px;
+    margin-right: 20px;
     border-radius: 20px;
+    float: right;
 
 }
 
@@ -253,7 +253,7 @@ body {
     float: left;
     height: 40px;
     padding: 5px;
-    fill: grey;
+    fill: white;;
 }
 
 /* */
@@ -389,7 +389,7 @@ h2 {
 
 .choose_1 {
     float: left;
-    width: 40px;
+    min-width: 40px;
     height: 50%;
     padding: 5px;
     margin-left: 15px;
@@ -605,6 +605,7 @@ figcaption p {
 
 .vallie {
     width: 300px;
+    height: 200px;
     padding: 30px;
     margin: 10px;
     text-align: left;
