--- a/index.css
+++ b/index.css
@@ -3,9 +3,13 @@
 }
 
 body {
-    margin: 0;
+    margin: 0px;
     background-color: whitesmoke;
-    width: 100%;
+    width: 1260px;
+}
+
+a {
+    font-style: ;
 }
 
 /* */
@@ -162,6 +166,7 @@ body {
     float: left;
     margin: 20px;
     padding: 20px;
+    font-size: 20px;
 }
 
 
@@ -253,7 +258,8 @@ body {
     float: left;
     height: 40px;
     padding: 5px;
-    fill: white;;
+    fill: white;
+    ;
 }
 
 /* */
@@ -264,10 +270,6 @@ body {
 
 /* footer*/
 
-.footer {
-    background-color: blue;
-    color: white;
-}
 
 a {
     color: white;
@@ -275,8 +277,8 @@ a {
 }
 
 .choose img_2 {
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
 }
 
 
@@ -355,6 +357,7 @@ h2 {
     margin-top: 40px;
     border-radius: 10px;
 }
+
 #smart {
 
     height: 120px;
@@ -394,11 +397,12 @@ h2 {
     padding: 5px;
     margin-left: 15px;
     padding: 50px;
-    
+
 }
-.choose_1 img{
-    height:500px;
-    width:600px;
+
+.choose_1 img {
+    height: 500px;
+    width: 600px;
 }
 
 .choose_2 {
@@ -406,8 +410,8 @@ h2 {
     text-align: center;
 
     margin-right: 5px;
-    font-size: 2em;
-    width: 45%;
+    font-size: 20px;
+    width: 500px;
     height: 200px;
 }
 
@@ -416,7 +420,7 @@ h2 {
     width: 100%;
 }
 
-.sidel{
+.sidel {
     text-align: left;
     float: left;
     width: 200px;
@@ -424,7 +428,7 @@ h2 {
 }
 
 .sider {
-    
+
     text-align: left;
     float: right;
 
@@ -463,7 +467,7 @@ figcaption p {
     text-align: center;
     width: 760px;
     padding: 20px;
-    
+
 }
 
 .Images {
@@ -479,9 +483,10 @@ figcaption p {
 
 }
 
-.prts{
+.prts {
     width: 10px;
 }
+
 .prts__pal1 {
     float: left;
     height: 600px;
@@ -490,9 +495,9 @@ figcaption p {
 
 }
 
-.prts_pal1 img{
-    height:500px;
-    width:300px;
+.prts_pal1 img {
+    height: 500px;
+    width: 300px;
 }
 
 
@@ -511,10 +516,13 @@ figcaption p {
 
 
 }
-.but_4{
-    float:right;
+
+.but_4 {
+    float: right;
+    height: 30px;
+    color: white;
     background-color: blue;
-    border-radius: 10px ;
+    border-radius: 10px;
 }
 
 /* Customers*/
@@ -526,7 +534,7 @@ figcaption p {
 }
 
 .customers_main {
-    
+
     height: 500px;
     width: 1000px;
     padding: 20px;
@@ -543,8 +551,8 @@ figcaption p {
 .cust_1 {
     height: 300px;
     width: 250px;
-     text-align: left;
-     padding: 20px;
+    text-align: left;
+    padding: 20px;
     float: right;
     background-color: white;
 
@@ -576,6 +584,8 @@ figcaption p {
 }
 
 .but_5 {
+    color: white;
+    font-size: 30px;
     background-color: blue;
     border-radius: 10px;
     float: right;
@@ -584,10 +594,10 @@ figcaption p {
 /*Footer*/
 .footer {
     background-color: blue;
-    margin-top:  10px;
-    padding: 20px;
+    margin-top: 10px;
+    padding: 40px;
     color: white;
-    font-size: 50px;
+    font-size: 20px;
     font-family: Arial Verdana;
     width: 1200px;
     height: 1000px;
@@ -605,7 +615,8 @@ figcaption p {
 
 .vallie {
     width: 300px;
-    height: 200px;
+    height: 00px;
+    font-size: 30px;
     padding: 30px;
     margin: 10px;
     text-align: left;
@@ -613,9 +624,10 @@ figcaption p {
     float: left;
 
 }
-.vallie h3{
+
+.vallie h3 {
     font-size: 1em;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
@@ -628,7 +640,8 @@ figcaption p {
 
 
 }
-.ft_prt_2 h4{
+
+.ft_prt_2 h4 {
     font-size: 50px;
     font-style: bold;
 }
@@ -642,7 +655,8 @@ figcaption p {
     font-size: 30px;
 
 }
-.ft_abt_3 h4{
+
+.ft_abt_3 h4 {
     font-size: 50px;
     font-style: bold;
 }
@@ -653,7 +667,8 @@ figcaption p {
     font-size: 30px;
     width: 200px;
 }
-.ft_res_4 h4{
+
+.ft_res_4 h4 {
     font-size: 50px;
     font-style: bold;
 }
