--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -170,9 +170,10 @@ body {
 .video_ico {
     padding: 10px;
     font-size: 3em;
-    border-radius: 300px;
+    border-radius: 75%;
     margin: 20px;
     background-color: blue;
+    color: white;
 }
 
 /**/
@@ -583,24 +584,28 @@ figcaption p {
     background-color: blue;
     border-radius: 10px;
     float: right;
+    margin-bottom: 30px;
 }
 
 /*Footer*/
 
 footer {
     background-color: brown;
+    display: flex;
 }
 
 .footer {
-    background-color: darkblue;
-    display: block;
-    padding: 40px;
+    background-color: #2549d3;   
+    position: absolute; 
+    display: flex;
+    padding-right: 100px;
     color: white;
     font-size: 20px;
     font-family: Arial Verdana;
-    width: 1200px;
-    height: 500px;
-    display: inline-block;
+    width: 100%;
+    height: 700px;
+    left:0;
+    right:0;
 }
 
 
@@ -613,20 +618,20 @@ footer {
 
 .vallie {
 
-    width: 300px;
+    width: 25%;
     height: 200px;
     font-size: 30px;
-    padding: 30px;
+    padding: 20px;
     margin: 10px;
     text-align: left;
-    font-family: 'Geneva', Tahoma, sans-serif;
+    font-family:"Oleo Script";
     float: left;
 
 }
 
 .vallie h3 {
     font-size: 1em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Space Grotesk', 'Oleo Script';
 }
 
 
@@ -634,7 +639,7 @@ footer {
     padding: 30px;
     float: left;
     margin: 10px;
-    width: 200px;
+    width: 25%;
     font-size: 30px;
 
 
@@ -649,7 +654,7 @@ footer {
 .ft_abt_3 {
     float: left;
     margin: 10px;
-    width: 200px;
+    width: 25%;
     padding: 30px;
     font-size: 30px;
 
@@ -663,8 +668,10 @@ footer {
 
 .ft_res_4 {
     float: right;
+    padding: 30px;
+    margin: 10px;
     font-size: 30px;
-    width: 200px;
+    width: 25%;
 }
 
 .ft_res_4 h4 {
